@@ -21,6 +21,8 @@ Version 1.4.4 - CVS
   - Various fixes for minor user interface glitches.
   - Fixed broken POP before SMTP (password wasn't being used)
   - Custom option page values now repopulate correctly
+  - Added "no focus" option for compose page in display preferences (setting
+    reply focus to "No focus" also affects composing new messages)
 
 Version 1.4.3a - 2 June 2004
 ----------------------------
